Case Guidelines added

--- a/public/cases/index.html
+++ b/public/cases/index.html
@@ -27,7 +27,8 @@
   
     
   
-  <meta name="description" content="Capital Budgeting: Bombardier
+  <meta name="description" content="Case Report and Presentation
+Capital Budgeting: Bombardier
 Going Public: Snapchat Inc.
 HOOPP What’s Next?
 ">
@@ -242,7 +243,8 @@
   <meta property="og:site_name" content="MBAS 821 Finance Fundamentals">
   <meta property="og:url" content="/cases/">
   <meta property="og:title" content="Case study | MBAS 821 Finance Fundamentals">
-  <meta property="og:description" content="Capital Budgeting: Bombardier
+  <meta property="og:description" content="Case Report and Presentation
+Capital Budgeting: Bombardier
 Going Public: Snapchat Inc.
 HOOPP What’s Next?
 "><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
@@ -570,6 +572,7 @@
       
 
 
+<p><a href="/files/case-guideline/case-guideline.pdf" target="_blank">Case Report and Presentation</a></p>
 <ol style="list-style-type: decimal">
 <li><p>Capital Budgeting: Bombardier</p></li>
 <li><p>Going Public: Snapchat Inc.</p></li>
