--- a/static/slides/00-slide/00-slide.html
+++ b/static/slides/00-slide/00-slide.html
@@ -44,13 +44,17 @@ Course website: https://queens-mbas821.netlify.app/
   - Find your course outline, slides, assignments here.
   
 Grading:
+]
 
   - 2 Individual assignments (5% each, due on August 11th and 21st at 11:59pm)
   
   - 3 Case reports (Group work, 10% each, due on August 12th, 19th, 24th before class starts)
   
   - 1 Case presentation (Group work, 15%, on the report submission date of your selected case.)
-]
+  
+  - 1 3-hour open book final exam (40%)
+  
+  - Class Participation (5%)
 ???
 Please ask the students to figure out the presentation schedule.
 ---
