--- a/content/Cases/index.html
+++ b/content/Cases/index.html
@@ -8,7 +8,7 @@ output:
 
 
 
-<p><a href="/files/case-guideline/case-guideline.pdf" target="_blank">Case Report and Presentation</a></p>
+<p><a href="/files/case-guideline/case-guideline.pdf" target="_blank">Case Report and Presentation Guideline</a></p>
 <ol style="list-style-type: decimal">
 <li><p>Capital Budgeting: Bombardier</p></li>
 <li><p>Going Public: Snapchat Inc.</p></li>
