--- a/content/Slides/01-content.html
+++ b/content/Slides/01-content.html
@@ -1,7 +1,7 @@
 ---
 title: "Topic 1: Time Value of Money"
 linktitle: "1. Time Value of Money"
-date: "2020-07-22"
+date: "2020-07-30"
 menu:
   content:
     parent: Course Slides
@@ -16,5 +16,5 @@ output:
 
 
 
-<p><a href="/slides/01-slide/01-slide.html" target="_blank"><span class="btn btn-primary btn-lg"><i class="fas fa-external-link-alt"></i> View all slides in new window</span> </a></p>
-<p><a href="/slides/01-slide/01-slide.pdf" target="_blank"><span class="btn btn-primary btn-lg"><i class="far fa-file-pdf"></i> Download PDF of all slides</span></a></p>
+<p><a href="/slides/01-slide/01-slide.html" target="_blank"><span class="btn btn-primary btn-lg"><i class="fas fa-external-link-alt"></i>Open slides (html)</span> </a></p>
+<p><a href="/slides/01-slide/01-slide.pdf" target="_blank"><span class="btn btn-primary btn-lg"><i class="far fa-file-pdf"></i>Download slides (PDF)</span></a></p>
