--- a/content/Slides/_index.html
+++ b/content/Slides/_index.html
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-date: "2020-07-22"
+date: "2020-07-30"
 menu:
   content:
     parent: 
@@ -11,5 +11,5 @@ weight: 1
 
 
 
-<p><a href="/slides/00-slide/00-slide.html" target="_blank"><span class="btn btn-primary btn-lg"><i class="fas fa-external-link-alt"></i> View all slides in new window</span> </a></p>
-<p><a href="/slides/00-slide/00-slide.pdf" target="_blank"><span class="btn btn-primary btn-lg"><i class="far fa-file-pdf"></i> Download PDF of all slides</span></a></p>
+<p><a href="/slides/00-slide/00-slide.html" target="_blank"><span class="btn btn-primary btn-lg"><i class="fas fa-external-link-alt"></i>Open slides (html)</span> </a></p>
+<p><a href="/slides/00-slide/00-slide.pdf" target="_blank"><span class="btn btn-primary btn-lg"><i class="far fa-file-pdf"></i>Download slides (PDF)</span></a></p>
