--- a/public/cases/index.html
+++ b/public/cases/index.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="Case Report and Presentation
+  <meta name="description" content="Case Report and Presentation Guideline
 Capital Budgeting: Bombardier
 Going Public: Snapchat Inc.
 HOOPP What’s Next?
@@ -243,7 +243,7 @@ Capital Budgeting: Bombardier
   <meta property="og:site_name" content="MBAS 821 Finance Fundamentals">
   <meta property="og:url" content="/cases/">
   <meta property="og:title" content="Case study | MBAS 821 Finance Fundamentals">
-  <meta property="og:description" content="Case Report and Presentation
+  <meta property="og:description" content="Case Report and Presentation Guideline
 Capital Budgeting: Bombardier
 Going Public: Snapchat Inc.
 HOOPP What’s Next?
@@ -572,7 +572,7 @@ Capital Budgeting: Bombardier
       
 
 
-<p><a href="/files/case-guideline/case-guideline.pdf" target="_blank">Case Report and Presentation</a></p>
+<p><a href="/files/case-guideline/case-guideline.pdf" target="_blank">Case Report and Presentation Guideline</a></p>
 <ol style="list-style-type: decimal">
 <li><p>Capital Budgeting: Bombardier</p></li>
 <li><p>Going Public: Snapchat Inc.</p></li>
