Bombardier case overview, case links, part of topic 3

--- a/content/Cases/index.html
+++ b/content/Cases/index.html
@@ -10,7 +10,12 @@ output:
 
 <p><a href="/files/case-guideline/case-guideline.pdf" target="_blank">Case Report and Presentation Guideline</a></p>
 <ol style="list-style-type: decimal">
-<li><p>Capital Budgeting: Bombardier</p></li>
-<li><p>Going Public: Snapchat Inc.</p></li>
-<li><p>HOOPP What’s Next?</p></li>
+<li><a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/ca003659-69a3-426c-8e86-eb8e79974f00" target = "_blank"><strong>Capital Budgeting: Bombardier</strong></a></li>
 </ol>
+<ul>
+<li>Case Overview <a href="/slides/cases/01-slide/01-slide.html" target="_blank">html</a> <a href="/slides/cases/01-slide/01-slide.html" target="_blank">PDF</a></li>
+</ul>
+<p><br><br>
+2. <a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/f4b67e4a-12a3-4661-99df-28763841a8f4" target = "_blank"><strong>Going Public: Snapchat Inc.</strong></a></p>
+<p><br><br>
+3. <a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/65a3ce17-70fb-4909-90e2-8ff23bf8c0f3" target = "_blank"><strong>HOOPP What’s Next?</strong></a></p>
