--- a/public/cases/index.html
+++ b/public/cases/index.html
@@ -27,11 +27,11 @@
   
     
   
-  <meta name="description" content="Case Report and Presentation Guideline
-Capital Budgeting: Bombardier
-Going Public: Snapchat Inc.
-HOOPP What’s Next?
-">
+  <meta name="description" content="Case Report and Presentation Guideline
+Capital Budgeting: BombardierCase Overview html PDF
+2. Going Public: Snapchat Inc.
+
+3. HOOPP What’s Next?">
 
   
   <link rel="alternate" hreflang="en-us" href="/cases/">
@@ -243,11 +243,11 @@ Capital Budgeting: Bombardier
   <meta property="og:site_name" content="MBAS 821 Finance Fundamentals">
   <meta property="og:url" content="/cases/">
   <meta property="og:title" content="Case study | MBAS 821 Finance Fundamentals">
-  <meta property="og:description" content="Case Report and Presentation Guideline
-Capital Budgeting: Bombardier
-Going Public: Snapchat Inc.
-HOOPP What’s Next?
-"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Case Report and Presentation Guideline
+Capital Budgeting: BombardierCase Overview html PDF
+2. Going Public: Snapchat Inc.
+
+3. HOOPP What’s Next?"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -574,10 +574,15 @@ Capital Budgeting: Bombardier
 
 <p><a href="/files/case-guideline/case-guideline.pdf" target="_blank">Case Report and Presentation Guideline</a></p>
 <ol style="list-style-type: decimal">
-<li><p>Capital Budgeting: Bombardier</p></li>
-<li><p>Going Public: Snapchat Inc.</p></li>
-<li><p>HOOPP What’s Next?</p></li>
+<li><a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/ca003659-69a3-426c-8e86-eb8e79974f00" target = "_blank"><strong>Capital Budgeting: Bombardier</strong></a></li>
 </ol>
+<ul>
+<li>Case Overview <a href="/slides/cases/01-slide/01-slide.html" target="_blank">html</a> <a href="/slides/cases/01-slide/01-slide.html" target="_blank">PDF</a></li>
+</ul>
+<p><br><br>
+2. <a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/f4b67e4a-12a3-4661-99df-28763841a8f4" target = "_blank"><strong>Going Public: Snapchat Inc.</strong></a></p>
+<p><br><br>
+3. <a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/65a3ce17-70fb-4909-90e2-8ff23bf8c0f3" target = "_blank"><strong>HOOPP What’s Next?</strong></a></p>
 
     </div>
 
