--- a/public/slides/02-slide/02-slide.html
+++ b/public/slides/02-slide/02-slide.html
@@ -479,6 +479,7 @@ Cons:
 
 # Formula Sheet
 
+.large[
 $$
 NPV = \sum_{t=1}^T\frac{CF_t}{(1+r)^t}-C_0
 $$
@@ -486,9 +487,11 @@ $$
 $$
 \sum_{t=1}^T\frac{CF_t}{(1+IRR)^t} -C_0 = 0
 $$
+
 $$
 PI = \frac{\sum_{t=1}^T \frac{CF_t}{(1+r)^t}}{C_0}
 $$
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
