Finished slide 3 Capital Budgeting

--- a/public/slides/02-slide/02-slide.html
+++ b/public/slides/02-slide/02-slide.html
@@ -374,14 +374,14 @@ What should be the decision based on incremental IRR?
 
 - The suggestion is to *perform the substraction so that the first nonzero cash flow is negative* (i.e. In this case, B-A)
 
-- This makes the incremental project an "*investing* project" so that the ultimate decision is more intuitive (Choose B over A if IRR &gt; *r*) 
-]
+- This makes the incremental project an "*investing* project" so that the ultimate decision is more intuitive (Choose B over A if IRR &gt; *r*) ]
 .pull-left[
-&lt;img src="11-crossoverrate2.png" width="120%" style="display: block; margin: auto;" /&gt;
+&lt;img src="11-crossoverrate2.png" width="80%" style="display: block; margin: auto;" /&gt;
 ]
 .pull-right[
-&lt;img src="12-crossoverrate3.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="12-crossoverrate3.png" width="80%" style="display: block; margin: auto;" /&gt;
 ]
+
 ---
 
 # Timing Problem: Graphical Solution
@@ -474,6 +474,23 @@ Cons:
 # What do CFOs use in practice?
 
 &lt;img src="15-cfo.png" width="100%" style="display: block; margin: auto;" /&gt;
+
+---
+
+# In Summary
+
+.large[
+We learned:
+
+- Investment Decision Rules
+  - Net Present Value (NPV)
+  - Internal Rate of Return (IRR)
+      - Incremental IRR
+  - Payback Period (PP)
+  - Profitability Index (PI)
+
+Next class we will learn how to apply these decision rules in a business scenario.
+]
 
 ---
 
