added breakout activity for class 3: capital budgeting

--- a/content/Slides/03-content.html
+++ b/content/Slides/03-content.html
@@ -1,20 +1,8 @@
----
-title: "Topic 3: Capital Budgeting"
-linktitle: "3. Capital Budgeting"
-date: "2020-07-31"
-menu:
-  content:
-    parent: Course Slides
-    weight: 30
-type: docs
-bibliography: "../../static/bib/references.bib"
-csl: "../../static/bib/chicago-fullnote-bibliography-no-bib.csl"
-output:
-  blogdown::html_page:
-    toc: true
----
-
 
 
 <p><a href="/slides/03-slide/03-slide.html" target="_blank"><span class="btn btn-primary btn-lg"><i class="fas fa-external-link-alt"></i> Open slides (html)</span> </a></p>
 <p><a href="/slides/03-slide/03-slide.pdf" target="_blank"><span class="btn btn-primary btn-lg"><i class="far fa-file-pdf"></i> Download slides (PDF)</span></a></p>
+<p><br><br></p>
+<p><strong>Breakout Assignment</strong>
+<a href="/slides/03-slide/Breakout Assignment Excel Activity.docx" download>Assignment Question</a> <br>
+<a href="/slides/03-slide/Breakout Assignment Student Copy.xlsx" download>Assignment Excel Sheet</a></p>
