recompile intro and TVM

--- a/static/slides/01-slide/01-slide.html
+++ b/static/slides/01-slide/01-slide.html
@@ -110,11 +110,13 @@ NPV = -\text{investment} + \frac{CF}{1+r} &gt; 0
 $$
 
 - Q: Suppose an investment that promises to pay $10,000 in one year is offered for sale for $9,500. Your interest rate is 5%. Should you invest?
+
 ]
 ---
 # Net Present Value (NPV)
 
 .large[
+
 Q: Suppose an investment that promises to pay $10,000 in one year is offered for sale for $9,500. Your interest rate is 5%. Should you invest?
 
 $$
@@ -123,7 +125,8 @@ $$
 
 A: Yes!
 
-**Note**: "Your interest rate" is your **required rate of return**, it is possible that different individuals/entities will have **different** required rate of return.
+**Note**: "Your interest rate" is your **required rate of return**, it is possible that different individuals/entities will have **different** required rates of return.
+
 ]
 ---
 class: left, middle
@@ -174,7 +177,8 @@ class: left, middle
 # Multiperiod Present Value
 
 .large[
-You would like to save to purchase a Ferrari 5 years from now, which costs $400,000. With interest rate of 8% per year, compounding annually, how much do you need to save today?
+You would like to save to purchase a Porsche, 5 years from now that costs $400,000. With interest rate of 8% per year, compounding annually, How much do you need to save today with an 8\% interest rate compounded annually?
+
 ]
 ---
 # Multiperiod Present Value
@@ -200,6 +204,7 @@ $$
 # Discount Factor (DF)
 
 .large[
+
 **Discount Factor (DF)** is the Present Value of a future $1.
 
 Therefore,
@@ -218,7 +223,9 @@ class: left, middle
 
 # Exercise: Solve for number of periods
 .large[
+
 If we deposit $5,000 today in an account paying 10% interest rate, compounding annually. How long does it take to double our money?
+
 ]
 ---
 # Formula Setup
@@ -264,9 +271,9 @@ class: left, middle
 # Real Life Example: Solve for Interest Rate
 
 .large[
-In 1626, Dutch Settlers who were representatives of the West India Company, which was publicly traded at the time, purchased the Island Manhattes from the Indians for a value of 60 guilders (equivalent to $24 at the time). 
+In 1626, Dutch Settlers who were representatives of the West India Company, which was publicly traded at the time, purchased the Island Manhattes from the Indians for a value of 60 guilders (equivalent to 24 1626 US Dollars). 
 
-According to Bloomberg, commercial and residential properties in Manhattan for 2018 was $483.6 billion. 
+According to Bloomberg, commercial and residential properties in Manhattan were worth roughly $483.6 billion. 
 
 What was the rate of return on this purchase? 
 
@@ -315,20 +322,20 @@ So... Was it worth?
 
   - Cost of developing the Manhattan area.
   
-  - Income/Benefits from the Manhattan area.
+  - Income and benefits of the Manhattan area.
   
-  - Many other stuff...]
+  - Many other issues...]
 
 ---
 # APR vs EAR
 
 .large[
-Uptil now we have been assuming that interests are compounded annually. But what if interests are compounded more (or less) frequently? 
+Until now we have been assuming that interest is compounded annually. But what if interests are compounded more (or less) frequently? 
 ]
 
-- .large[**Annual Percentage Rate (APR)** is the stated or quoted annual interest rate without consideration of compounding.]
+- .large[**Annual Percentage Rate (APR)** is the stated or quoted annual interest rate without compounding.]
 
-  - e.g. An APR of 12% compounding quarterly means that it will pay 3% per quarter and each compounding period is also 3 months.
+  - e.g. An APR of 12% compounding quarterly means that it will pay 3% per quarter. The interest will then compound every 3 months (4 times per year).
   
   - $1 investment in a 12% APR with quarterly compounding would be worth `\((1+0.03)^4 = 1.1255\)` next year.
 
@@ -659,7 +666,7 @@ Both methods should yield the same result: $$ PV = \$ 3,547,544 $$
 # In Summary
 
 .large[
-We now know how to:
+We learned how to:
 ]
 
   - Compare cash flows that occur at different points in time.
@@ -671,6 +678,22 @@ We now know how to:
   - Find present value of perpetuities and growing perpetuities.
   
   - Find present value and future values of annuities and growing annuities.
+
+---
+
+# What can we do with these numbers?
+
+.large[
+1. Managers might evaluate two projects and decide for none, one, or both
+2. Investors might compare investments (Bank of Montreal or Scotiabank)
+3. Loan officers decide on a loan 
+4. Financial manager may decide to raise equity or borrow money
+5. A retiree might sell her house and invest in an annuity]
+
+--
+
+.large[
+The numbers only serve a purpose if they are useful to decision making!]
 
 ---
 # Formula Sheet
