--- a/public/slides/00-slide/00-slide.html
+++ b/public/slides/00-slide/00-slide.html
@@ -170,7 +170,7 @@ The course website is here: https://queens-mbas821.netlify.app/. I will post mat
 
 1. If you have a large capital investment where retained earnings or cash on hand cannot cover the cost and you need to raise the money externally, how would you raise this money? Why?
   
-2. What are the pros and cons of this action? Are there assoicated risks? For whom?
+2. What are the pros and cons of this action? Are there associated risks? For whom?
 
 3. How would this impact the financial market? For instance, would your stock value move up or down?
 ]
@@ -183,7 +183,7 @@ The course website is here: https://queens-mbas821.netlify.app/. I will post mat
 
   - Distinguishes people on the job market.
   
-  - Develops a more comprehensive and more efficient business acumen.
+  - Develops business acumen.
   
   - Make informed decisions regarding spending, saving, and investment.
   
@@ -264,32 +264,6 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
-(function() {
-  "use strict"
-  // Replace <script> tags in slides area to make them executable
-  var scripts = document.querySelectorAll(
-    '.remark-slides-area .remark-slide-container script'
-  );
-  if (!scripts.length) return;
-  for (var i = 0; i < scripts.length; i++) {
-    var s = document.createElement('script');
-    var code = document.createTextNode(scripts[i].textContent);
-    s.appendChild(code);
-    var scriptAttrs = scripts[i].attributes;
-    for (var j = 0; j < scriptAttrs.length; j++) {
-      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
-    }
-    scripts[i].parentElement.replaceChild(s, scripts[i]);
-  }
-})();
-(function() {
-  var links = document.getElementsByTagName('a');
-  for (var i = 0; i < links.length; i++) {
-    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
-      links[i].target = '_blank';
-    }
-  }
-})();
 // adds .remark-code-has-line-highlighted class to <pre> parent elements
 // of code chunks containing highlighted lines with class .remark-code-line-highlighted
 (function(d) {
@@ -307,6 +281,17 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   }
   preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
 })(document);</script>
+
+<script>
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();
+</script>
 
 <script>
 slideshow._releaseMath = function(el) {
