update course outline, added deliverable overview

--- a/content/Assignments/index.html
+++ b/content/Assignments/index.html
@@ -1,5 +1,5 @@
 ---
-title: Assignments
+title: Deliverables
 output:
   blogdown::html_page:
     toc: true
@@ -8,4 +8,21 @@ output:
 
 
 
-<p>Under construction.</p>
+<p>Throughout the course, you will need to submit:</p>
+<ul>
+<li>2 assignments (individual)
+<ul>
+<li>Due on August 11th and 21st at 11:59pm</li>
+</ul></li>
+<li>3 case reports (group work)
+<ul>
+<li>Due on August 12th, 19th, 24th before class</li>
+</ul></li>
+<li>1 case presentation (group work)
+<ul>
+<li>on the day of case report submission</li>
+</ul></li>
+</ul>
+<hr />
+<p>Assignment 1 Questions</p>
+<p>Assignment 2 Questions</p>
