--- a/content/Assignments/index.html
+++ b/content/Assignments/index.html
@@ -24,5 +24,5 @@ output:
 </ul></li>
 </ul>
 <hr />
-<p>Assignment 1 Questions</p>
+<p><a href="../../files/MBAS%20821%20Assignment%201.docx">Assignment 1 Questions</a></p>
 <p>Assignment 2 Questions</p>
