--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -582,7 +582,7 @@
 </ul></li>
 </ul>
 <hr />
-<p>Assignment 1 Questions</p>
+<p><a href="../../files/MBAS%20821%20Assignment%201.docx">Assignment 1 Questions</a></p>
 <p>Assignment 2 Questions</p>
 
     </div>
