--- a/public/slides/02-slide/02-slide.html
+++ b/public/slides/02-slide/02-slide.html
@@ -38,7 +38,7 @@ class: center, middle, inverse, title-slide
 
 # How do companies make investment decisions?
 
-&lt;img src="01-tesla.png" width="65%" style="display: block; margin: auto;" /&gt;
+&lt;img src="01-tesla.png" width="52%" style="display: block; margin: auto;" /&gt;
 
 .small[https://www.statesman.com/business/20200722/tesla-picks-austin-for-1-billion-auto-factory]
 
@@ -243,7 +243,7 @@ Note: the x-intercept of the graph shows the *r* when NPV = 0, i.e. the IRR.
 
 # Prof. Riordan's Book Project
 
-&lt;img src="04-bookIRR.png" width="80%" style="display: block; margin: auto;" /&gt;
+&lt;img src="04-bookIRR.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 - Prof. Riordan's deal can be seen as a **financing** opportunity:
   - He *receives* cash at time 0 and *pays out* over three years
@@ -282,7 +282,7 @@ What does the timeline look like?
 
 # Prof. Riordan's Book Project &lt;br&gt; (with royalties)
 
-&lt;img src="05-multipleIRR.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="05-multipleIRR.png" width="48%" style="display: block; margin: auto;" /&gt;
 
 - If cash flows "flip-flop", may obtain non-unique IRR values:
   - NPV &gt; 0 if discount rate is *low* or *high*
@@ -315,7 +315,7 @@ Solutions to the **scale problem**:
 Do the difference between the two projects and calculate the IRR, then compare that IRR to the cost of capital.
 ]
 
-&lt;img src="07-IncrementalIRR.png" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="07-IncrementalIRR.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 .large[
 What should be the decision based on incremental IRR?
@@ -325,7 +325,7 @@ What should be the decision based on incremental IRR?
 
 # The Timing Problem
 
-&lt;img src="08-timingproblem.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="08-timingproblem.png" width="70%" style="display: block; margin: auto;" /&gt;
 
 .large[
 - The preferred project in this case depends on the discount rate, not the IRR.
@@ -348,7 +348,7 @@ What should be the decision based on incremental IRR?
 - Where is the *crossover rate*?
 ]
 .pull-right[
-&lt;img src="09-timingproblem2.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="09-timingproblem2.png" width="60%" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
@@ -363,7 +363,7 @@ What should be the decision based on incremental IRR?
 - The crossover rate (IRR of B-A) ≈ 10.55%
 ]
 
-&lt;img src="10-crossoverrate.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="10-crossoverrate.png" width="30%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -386,7 +386,7 @@ What should be the decision based on incremental IRR?
 
 # Timing Problem: Graphical Solution
 
-&lt;img src="13-timingproblem3.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="13-timingproblem3.png" width="80%" style="display: block; margin: auto;" /&gt;
 ---
 
 # Payback Period (PP)
@@ -407,7 +407,7 @@ Payback Period decision rule:
 Back to the New York and Chicago example. Using the payback period as decision criteria. Assume a payback period cutoff of 3 years.
 ]
 
-&lt;img src="14-pp.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="14-pp.png" width="70%" style="display: block; margin: auto;" /&gt;
 
 .large[
 We would accept New York and reject Chicago.
@@ -473,7 +473,7 @@ Cons:
 
 # What do CFOs use in practice?
 
-&lt;img src="15-cfo.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="15-cfo.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -483,10 +483,14 @@ Cons:
 We learned:
 
 - Investment Decision Rules
+
   - Net Present Value (NPV)
+  
   - Internal Rate of Return (IRR)
       - Incremental IRR
+      
   - Payback Period (PP)
+  
   - Profitability Index (PI)
 
 Next class we will learn how to apply these decision rules in a business scenario.
@@ -515,7 +519,8 @@ $$
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
-"countIncrementalSlides": false
+"countIncrementalSlides": false,
+"ratio": "16:9"
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
