--- a/static/slides/00-slide/00-slide.html
+++ b/static/slides/00-slide/00-slide.html
@@ -38,7 +38,7 @@ class: center, middle, inverse, title-slide
 
 # Welcome to Finance Fundamentals
 
-&lt;img src="stock-market-board.jpg" width="70%" style="display: block; margin: auto;" /&gt;
+&lt;img src="stock-market-board.jpg" width="50%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -104,7 +104,7 @@ The course website is here: https://queens-mbas821.netlify.app/. I will post mat
 ---
 # The Finance Roadmap
 
-&lt;img src="01-roadmap.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="01-roadmap.png" width="65%" style="display: block; margin: auto;" /&gt;
 ---
 
 # Decision making in a Finance world
@@ -200,7 +200,7 @@ The course website is here: https://queens-mbas821.netlify.app/. I will post mat
 
 # Where has the money gone?
 
-&lt;img src="04-cashflow.png" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="04-cashflow.png" width="65%" style="display: block; margin: auto;" /&gt;
 ---
 
 # In this course
@@ -223,7 +223,8 @@ The course website is here: https://queens-mbas821.netlify.app/. I will post mat
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
-"countIncrementalSlides": false
+"countIncrementalSlides": false,
+"ratio": "16:9"
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
