--- a/static/slides/01-slide/01-slide.html
+++ b/static/slides/01-slide/01-slide.html
@@ -38,7 +38,7 @@ class: center, middle, inverse, title-slide
 
 # Money now vs Money in the future
 
-&lt;img src="01-lottery.png" width="65%" style="display: block; margin: auto;" /&gt;
+&lt;img src="01-lottery.png" width="45%" style="display: block; margin: auto;" /&gt;
 
 .small[https://globalnews.ca/news/4314259/peterborough-man-7m-lottery-win/]
 
@@ -271,7 +271,7 @@ class: left, middle
 # Real Life Example: Solve for Interest Rate
 
 .large[
-In 1626, Dutch Settlers who were representatives of the West India Company, which was publicly traded at the time, purchased the Island Manhattes from the Indians for a value of 60 guilders (equivalent to 24 1626 US Dollars). 
+In 1626, Dutch Settlers who were representatives of the West India Company, which was publicly traded at the time, purchased the Island Manhattes from the Indians for a value of 60 guilders (equivalent to $24 USD in 1626). 
 
 According to Bloomberg, commercial and residential properties in Manhattan were worth roughly $483.6 billion. 
 
@@ -279,7 +279,7 @@ What was the rate of return on this purchase?
 
 .pull-left[Was it a good deal?]
 .pull-right[
-&lt;img src="02-manhattan.jpg" width="70%" style="display: block; margin: auto auto auto 0;" /&gt;
+&lt;img src="02-manhattan.jpg" width="60%" style="display: block; margin: auto auto auto 0;" /&gt;
 ]
 ]
 ---
@@ -430,7 +430,7 @@ We learned to:
 ---
 # Back to the lottery
 
-&lt;img src="01-lottery.png" width="65%" style="display: block; margin: auto;" /&gt;
+&lt;img src="01-lottery.png" width="45%" style="display: block; margin: auto;" /&gt;
 
 Which one would you pick?
 ---
@@ -525,18 +525,16 @@ A constant stream of cash flows with a fixed maturity *t*:
 
 ![](05-annuity.png)
 
-.large[
 $$
 PV = \frac{C}{(1+r)} + \frac{C}{(1+r)^2} + \frac{C}{(1+r)^3} + ... + \frac{C}{(1+r)^t}
 $$
-]
 
 .pull-left[
 The formula for the present value of an annuity is:
 ]
-.pull-right[.large[
+.pull-right[
 `$$PV = \frac{C}{r}\bigg[1-\frac{1}{(1+r)^t}\bigg]$$`
-]]
+]
 
 ---
 
@@ -685,19 +683,23 @@ We learned how to:
 
 .large[
 1. Managers might evaluate two projects and decide for none, one, or both
-2. Investors might compare investments (Bank of Montreal or Scotiabank)
-3. Loan officers decide on a loan 
-4. Financial manager may decide to raise equity or borrow money
-5. A retiree might sell her house and invest in an annuity]
 
---
+2. Investors might compare investments (Bank of Montreal or Scotiabank)
+
+3. Loan officers decide on a loan 
+
+4. Financial manager may decide to raise equity or borrow money
+
+5. A retiree might sell her house and invest in an annuity
+]
+
+&lt;br&gt;&lt;br&gt;
 
 .large[
 The numbers only serve a purpose if they are useful to decision making!]
 
 ---
-# Formula Sheet
-
+### .center[Formula Sheet]
 $$ PV = \frac{FV_t}{(1+r)^t} $$
 $$ FV_t = PV(1+r)^t $$
 $$ PV(\text{Perpetuity}) =\frac{C}{r}$$
@@ -712,7 +714,8 @@ $$ FV_t(\text{Continuous Compounding}) = e^{rt}$$
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
-"countIncrementalSlides": false
+"countIncrementalSlides": false,
+"ratio": "16:9"
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
