--- a/static/slides/03-slide/03-slide.html
+++ b/static/slides/03-slide/03-slide.html
@@ -37,7 +37,7 @@ class: center, middle, inverse, title-slide
 &lt;/style&gt;
 # How much does an investment cost?
 
-&lt;img src="01-budget.jpg" width="35%" style="display: block; margin: auto;" /&gt;
+&lt;img src="01-budget.jpg" width="25%" style="display: block; margin: auto;" /&gt;
 
 As satirical as the comic is, the guy was doing a great job as a finance advisor, since he was able to figure out the cost of building the IT system. (Without knowing anything about it!)
 ---
@@ -215,7 +215,7 @@ Use whichever formula that is the most convenient based on the information given
 
 .large[Find the FCF of year 2019:]
 
-&lt;img src="02-FCF.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="02-FCF.png" width="30%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -628,7 +628,8 @@ $$
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
-"countIncrementalSlides": false
+"countIncrementalSlides": false,
+"ratio": "16:9"
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
