--- a/static/slides/02-slide/02-slide.html
+++ b/static/slides/02-slide/02-slide.html
@@ -93,7 +93,7 @@ NPV(\text{project}) = \sum_{t=1}^T\frac{CF_t}{(1+r)^t}-C_0
 $$
 ]
 .pull-right[
-`\(C_0\)`: Initial investment for the project
+`\(C_0\)`: Initial investment for the project &lt;br&gt;
 `\(CF_t\)`: Cash flow of project at time *t*
 ]
 
