excel tutorial added

--- a/content/Course/index.html
+++ b/content/Course/index.html
@@ -9,3 +9,4 @@ output:
 
 
 <p><a href="../../files/MBAS-Financial-Fundamentals-Summer-2020.docx">Course outline</a></p>
+<p><a href="../../files/Excel%20Tutorial.xlsx">Excel Tutoiral</a></p>
