--- a/public/course/index.html
+++ b/public/course/index.html
@@ -27,7 +27,8 @@
   
     
   
-  <meta name="description" content="Course outline">
+  <meta name="description" content="Course outline
+Excel Tutoiral">
 
   
   <link rel="alternate" hreflang="en-us" href="/course/">
@@ -239,7 +240,8 @@
   <meta property="og:site_name" content="MBAS 821 Finance Fundamentals">
   <meta property="og:url" content="/course/">
   <meta property="og:title" content="General | MBAS 821 Finance Fundamentals">
-  <meta property="og:description" content="Course outline"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Course outline
+Excel Tutoiral"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -565,6 +567,7 @@
 
 
 <p><a href="../../files/MBAS-Financial-Fundamentals-Summer-2020.docx">Course outline</a></p>
+<p><a href="../../files/Excel%20Tutorial.xlsx">Excel Tutoiral</a></p>
 
     </div>
 
