Minor edit to spelling errors

--- a/public/course/index.html
+++ b/public/course/index.html
@@ -28,7 +28,7 @@
     
   
   <meta name="description" content="Course outline
-Excel Tutoiral">
+Excel Tutorial">
 
   
   <link rel="alternate" hreflang="en-us" href="/course/">
@@ -241,7 +241,7 @@ Excel Tutoiral">
   <meta property="og:url" content="/course/">
   <meta property="og:title" content="General | MBAS 821 Finance Fundamentals">
   <meta property="og:description" content="Course outline
-Excel Tutoiral"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+Excel Tutorial"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -567,7 +567,7 @@ Excel Tutoiral"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9a
 
 
 <p><a href="../../files/MBAS-Financial-Fundamentals-Summer-2020.docx">Course outline</a></p>
-<p><a href="../../files/Excel%20Tutorial.xlsx">Excel Tutoiral</a></p>
+<p><a href="../../files/Excel%20Tutorial.xlsx">Excel Tutorial</a></p>
 
     </div>
 
