--- a/content/Slides/03-content.html
+++ b/content/Slides/03-content.html
@@ -1,7 +1,7 @@
 ---
 title: "Topic 3: Capital Budgeting"
 linktitle: "3. Capital Budgeting"
-date: "2020-08-06"
+date: "2020-08-07"
 menu:
   content:
     parent: Course Slides
@@ -21,4 +21,5 @@ output:
 <p><br><br></p>
 <p><strong>Breakout Assignment</strong><br>
 <a href="/slides/03-slide/Breakout Assignment Excel Activity.docx" download>Assignment Question</a> <br>
-<a href="/slides/03-slide/Breakout Assignment Student Copy.xlsx" download>Assignment Excel Sheet</a> <br></p>
+<a href="/slides/03-slide/Breakout Assignment Student Copy.xlsx" download>Assignment Excel Sheet</a> <br>
+<a href="/slides/03-slide/Breakout Assignment Answer Key.xlsx" download>Answer Key</a></p>
