case 2 overview added

--- a/public/cases/index.html
+++ b/public/cases/index.html
@@ -30,7 +30,7 @@
   <meta name="description" content="Case Report and Presentation Guideline
 Capital Budgeting: BombardierCase Overview html PDF
 2. Going Public: Snapchat Inc.
-
+Case Overview html PDF
 3. HOOPP What’s Next?">
 
   
@@ -246,7 +246,7 @@ Capital Budgeting: BombardierCase Overview html PDF
   <meta property="og:description" content="Case Report and Presentation Guideline
 Capital Budgeting: BombardierCase Overview html PDF
 2. Going Public: Snapchat Inc.
-
+Case Overview html PDF
 3. HOOPP What’s Next?"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
@@ -577,10 +577,13 @@ Capital Budgeting: BombardierCase Overview html PDF
 <li><a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/ca003659-69a3-426c-8e86-eb8e79974f00" target = "_blank"><strong>Capital Budgeting: Bombardier</strong></a></li>
 </ol>
 <ul>
-<li>Case Overview <a href="/slides/cases/01-slide/01-slide.html" target="_blank">html</a> <a href="/slides/cases/01-slide/01-slide.html" target="_blank">PDF</a></li>
+<li>Case Overview <a href="/slides/cases/01-slide/01-slide.html" target="_blank">html</a> <a href="/slides/cases/01-slide/01-slide.pdf" target="_blank">PDF</a></li>
 </ul>
 <p><br><br>
 2. <a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/f4b67e4a-12a3-4661-99df-28763841a8f4" target = "_blank"><strong>Going Public: Snapchat Inc.</strong></a></p>
+<ul>
+<li>Case Overview <a href="/slides/cases/02-slide/02-slide.html" target="_blank">html</a> <a href="/slides/cases/02-slide/02-slide.pdf" target="_blank">PDF</a></li>
+</ul>
 <p><br><br>
 3. <a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/65a3ce17-70fb-4909-90e2-8ff23bf8c0f3" target = "_blank"><strong>HOOPP What’s Next?</strong></a></p>
 
