--- a/static/slides/cases/02-slide/02-slide.html
+++ b/static/slides/cases/02-slide/02-slide.html
@@ -73,7 +73,7 @@ Advantages of IPO:
 
 # Should your company go public?
 .large[
-There are many many considerations when deciding on whether or not to go public. A few is listed below, but there are certainly more.
+There are many many considerations when deciding on whether or not to go public. A few are listed below, but there are certainly more.
 
 *For*:
 ]
