Assignment 2 link activate

--- a/public/slides/cases/02-slide/02-slide.html
+++ b/public/slides/cases/02-slide/02-slide.html
@@ -107,7 +107,7 @@ There are many many considerations when deciding on whether or not to go public.
       
   - Apart from valuation, this case involves a lot of qualitative analysis.
   
-  - Feel free to gather data from sources outside the case to support your claim or assumptions.
+  - Feel free to gather data from sources outside the case to support your claims or assumptions.
 
 ---
 # Case Discussion
