--- a/content/Assignments/index.html
+++ b/content/Assignments/index.html
@@ -25,4 +25,4 @@ output:
 </ul>
 <hr />
 <p><a href="../../files/MBAS%20821%20Assignment%201.docx">Assignment 1 Questions</a></p>
-<p>Assignment 2 Questions</p>
+<p><a href="../../files/MBAS%20821%20Assignment%202.docx">Assignment 2 Questions</a></p>
