upload assignment 1 answer, update excel tutorial

--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -28,7 +28,7 @@
     
   
   <meta name="description" content="Throughout the course, you will need to submit:
-2 assignments (individual)Due on August 11th and 21st at 11:59pm3 case reports (group work)Due on August 12th, 19th, 24th before class1 case presentation (group work)on the day of case report submissionAssignment 1 Questions">
+2 assignments (individual)Due on August 11th and 21st at 11:59pm3 case reports (group work)Due on August 12th, 19th, 24th before class1 case presentation (group work)on the day of case report submissionAssignment 1 Questions Answer Key">
 
   
   <link rel="alternate" hreflang="en-us" href="/assignments/">
@@ -241,7 +241,7 @@
   <meta property="og:url" content="/assignments/">
   <meta property="og:title" content="Deliverables | MBAS 821 Finance Fundamentals">
   <meta property="og:description" content="Throughout the course, you will need to submit:
-2 assignments (individual)Due on August 11th and 21st at 11:59pm3 case reports (group work)Due on August 12th, 19th, 24th before class1 case presentation (group work)on the day of case report submissionAssignment 1 Questions"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+2 assignments (individual)Due on August 11th and 21st at 11:59pm3 case reports (group work)Due on August 12th, 19th, 24th before class1 case presentation (group work)on the day of case report submissionAssignment 1 Questions Answer Key"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -582,7 +582,7 @@
 </ul></li>
 </ul>
 <hr />
-<p><a href="../../files/MBAS%20821%20Assignment%201.docx">Assignment 1 Questions</a></p>
+<p><a href="../../files/MBAS%20821%20Assignment%201.docx">Assignment 1 Questions</a> <a href="../../files/MBAS%20821%20Assignment%201%20-%20Answer%20Key.docx">Answer Key</a></p>
 <p><a href="../../files/MBAS%20821%20Assignment%202.docx">Assignment 2 Questions</a></p>
 
     </div>
