assignment 2 deadline extended

--- a/content/Assignments/index.html
+++ b/content/Assignments/index.html
@@ -12,7 +12,7 @@ output:
 <ul>
 <li>2 assignments (individual)
 <ul>
-<li>Due on August 11th and 21st at 11:59pm</li>
+<li>Due on August 11th and 24th at 11:59pm</li>
 </ul></li>
 <li>3 case reports (group work)
 <ul>
