--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -28,7 +28,7 @@
     
   
   <meta name="description" content="Throughout the course, you will need to submit:
-2 assignments (individual)Due on August 11th and 21st at 11:59pm3 case reports (group work)Due on August 12th, 19th, 24th before class1 case presentation (group work)on the day of case report submissionAssignment 1 Questions Answer Key">
+2 assignments (individual)Due on August 11th and 24th at 11:59pm3 case reports (group work)Due on August 12th, 19th, 24th before class1 case presentation (group work)on the day of case report submissionAssignment 1 Questions Answer Key">
 
   
   <link rel="alternate" hreflang="en-us" href="/assignments/">
@@ -241,7 +241,7 @@
   <meta property="og:url" content="/assignments/">
   <meta property="og:title" content="Deliverables | MBAS 821 Finance Fundamentals">
   <meta property="og:description" content="Throughout the course, you will need to submit:
-2 assignments (individual)Due on August 11th and 21st at 11:59pm3 case reports (group work)Due on August 12th, 19th, 24th before class1 case presentation (group work)on the day of case report submissionAssignment 1 Questions Answer Key"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+2 assignments (individual)Due on August 11th and 24th at 11:59pm3 case reports (group work)Due on August 12th, 19th, 24th before class1 case presentation (group work)on the day of case report submissionAssignment 1 Questions Answer Key"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -570,7 +570,7 @@
 <ul>
 <li>2 assignments (individual)
 <ul>
-<li>Due on August 11th and 21st at 11:59pm</li>
+<li>Due on August 11th and 24th at 11:59pm</li>
 </ul></li>
 <li>3 case reports (group work)
 <ul>
