--- a/content/Course/index.html
+++ b/content/Course/index.html
@@ -10,3 +10,5 @@ output:
 
 <p><a href="../../files/MBAS-Financial-Fundamentals-Summer-2020.docx">Course outline</a></p>
 <p><a href="../../files/Excel%20Tutorial.xlsx">Excel Tutorial</a></p>
+<p><a href="../../files/ProblemSet.zip">Problem Sets and Answers</a></p>
+<p><a href="../../files/Exam%20Instruction.docx">What you should know for the exam</a></p>
