--- a/public/course/index.html
+++ b/public/course/index.html
@@ -28,7 +28,9 @@
     
   
   <meta name="description" content="Course outline
-Excel Tutorial">
+Excel Tutorial
+Problem Sets and Answers
+What you should know for the exam">
 
   
   <link rel="alternate" hreflang="en-us" href="/course/">
@@ -241,7 +243,9 @@ Excel Tutorial">
   <meta property="og:url" content="/course/">
   <meta property="og:title" content="General | MBAS 821 Finance Fundamentals">
   <meta property="og:description" content="Course outline
-Excel Tutorial"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+Excel Tutorial
+Problem Sets and Answers
+What you should know for the exam"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -568,6 +572,8 @@ Excel Tutorial"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9a
 
 <p><a href="../../files/MBAS-Financial-Fundamentals-Summer-2020.docx">Course outline</a></p>
 <p><a href="../../files/Excel%20Tutorial.xlsx">Excel Tutorial</a></p>
+<p><a href="../../files/ProblemSet.zip">Problem Sets and Answers</a></p>
+<p><a href="../../files/Exam%20Instruction.docx">What you should know for the exam</a></p>
 
     </div>
 
