--- a/content/Cases/index.html
+++ b/content/Cases/index.html
@@ -22,3 +22,6 @@ output:
 </ul>
 <p><br><br>
 3. <a href = "https://web.prod.business.queensu.ca/LivingCase/Nodes/Usage/311109/65a3ce17-70fb-4909-90e2-8ff23bf8c0f3" target = "_blank"><strong>HOOPP What’s Next?</strong></a></p>
+<ul>
+<li>Case Overview <a href="/slides/cases/03-slide/03-slide.html" target="_blank">html</a> <a href="/slides/cases/03-slide/03-slide.pdf" target="_blank">PDF</a></li>
+</ul>
