--- a/content/Course/index.html
+++ b/content/Course/index.html
@@ -13,3 +13,4 @@ output:
 <p><a href="../../files/ProblemSet.zip">Problem Sets and Answers</a></p>
 <p><a href="../../files/Exam%20Instruction.docx">What you should know for the exam</a></p>
 <p>Formula Sheet for Final <a href="/files/formula-sheet.html" target="_blank">html</a> <a href="/files/formula sheet.pdf" target="_blank">PDF</a></p>
+<p>Practice MC Questions <a href="/files/Practice MC/mc.html" target="_blank">html</a> <a href="/files/Practice MC/mc.pdf" target="_blank">PDF</a></p>
